# uprate

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: build_scss.yml
docs/source/: conf.py  index.md  index.rst
docs/source/_static/: custom.scss
docs/source/_static/css/: custom.css
docs/source/api/: bucket.rst  decorators.rst  errors.rst  index.md  rate.rst  ratelimit.rst  store.rst
docs/source/examples/: bucket.py  docs_index.py
uprate/: __init__.py  _sync.py  _utils.py  bucket.py  decorators.py  errors.py  rate.py  ratelimit.py  store.py
