
[tool.poetry]
name = "uprate"
version = "0.1.0"
description = "Ratelimits. Dumbified. A fully typed, simple ratelimit library."
authors = ["WizzyGeek <ojasscoding@gmail.com>"]
license = "MIT"
keywords = ["ratelimits", "limits", "ratelimit"]
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]
readme = "README.md"

[tool.poetry.urls]

[tool.poetry.dependencies]
python = "^3.9"
Sphinx = {version = "^4.1.1", optional = true}
myst-parser = {version = "^0.15.1", optional = true}

[tool.poetry.extras]
docs = ["Sphinx", "myst-parser"]

[tool.poetry.dev-dependencies]
mypy = "^0.910"
pytest = "^6.2.4"

[tool.mypy]
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
files = ["uprate", "tests"]
exclude = "docs/"
python_version = "3.9"

[tool.pyright]
include = ["uprate"]
exclude = ["docs", ".venv", ".git", "**/__pycache__", ".mypy_cache"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
