
[tool.poetry]
name = "uprate"
version = "0.1.0"
description = "Ratelimits. Dumbified. A fully typed, simple ratelimit library."
authors = ["WizzyGeek <ojasscoding@gmail.com>"]
license = "MIT"
keywords = ["ratelimits", "limits", "ratelimit"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]
readme = "README.md"

homepage = "https://github.com/WizzyGeek/uprate#readme"
repository = "https://github.com/WizzyGeek/uprate"
documentation = "https://uprate.readthedocs.io/en/latest/"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/WizzyGeek/uprate/issues"
"Discord" = "https://discord.gg/udmdsFk6Yx"

[tool.poetry.dependencies]
python = "^3.9"
Sphinx = {version = "^4.1.1", optional = true}
myst-parser = {version = "^0.15.1", optional = true}
furo = {version = "^2021.7.5-beta.38", optional = true}
sphinx-copybutton = {version = "^0.4.0", optional = true}

[tool.poetry.extras]
docs = ["Sphinx", "myst-parser", "furo", "sphinx-copybutton"]

[tool.poetry.dev-dependencies]
mypy = "^0.910"
pytest = "^6.2.4"

[tool.mypy]
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
files = ["uprate", "tests"]
exclude = "docs/"
python_version = "3.9"

[tool.pyright]
include = ["uprate"]
exclude = ["docs", ".git", "**/__pycache__", ".mypy_cache"]
ignore = [".venv"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
